sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:14: error: 'while' expected but '}' found.
} 
^