sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  do{
    for (i <- 0 to getNombreValeurs-2){
      if (getValeur(i)>getValeur(i+1)){
        echange(i,i+1)
      }
    }
    for (i <- 0 to getNombreValeurs -2 by -1){
      if(getValeur(i)>getValeur(i+1))
      echange(i,i+1)
    }
  }
}